<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="?attr/actionBarSize"
    android:paddingLeft="@dimen/x_small_padding"
    android:paddingRight="@dimen/x_small_padding">

    <com.dbs.ui.components.DBSImageBadgeView
        android:id="@+id/leftNavigationItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/x_small_padding"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.dbs.ui.components.DBSImageBadgeView
        android:id="@+id/rightNavigationItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/x_small_padding"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</android.support.constraint.ConstraintLayout>