...
    <string name="good_morning">Good Morning</string>
    <string name="good_afternoon">Good Afternoon</string>
    <string name="good_evening">Good Evening</string>
    <string name="rain">Rainy</string>
    <string name="few_cloudy">Few Cloudy</string>
    <string name="scatter_cloudy">Scatter Cloudy</string>
    <string name="broken_cloudy">Broken Cloudy</string>
    <string name="mist">Mist</string>
    <string name="snow">Snow</string>
    <string name="sun">Sunny</string>
    <string name="thunderstorm">Thunderstorm</string>
    <string name="html_text" translatable="false"><![CDATA[<a href=\'google.com\'>Hello HTML TEXT</a>]]></string>
    <string-array
...
