...
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="4dp">

    <EditText
        android:id="@+id/compose_message_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
...
        android:minLines="1"
        android:padding="10dp"
        android:scrollbars="vertical"
        android:scrollHorizontally="false"
        android:textCursorDrawable="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/send_button"
        app:layout_constraintStart_toEndOf="@+id/nonsense_hamburger"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/send_button"
        android:layout_width="wrap_content"
...
