<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/chatRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/chat_list"
        android:clipToPadding="false"
        android:paddingTop="16dp"
        android:paddingBottom="16dp" />


    <com.dbs.replsdk.ui.components.QuickReplyView
        android:id="@+id/quickRepliesRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/chat_list"
        android:visibility="gone" />

    <include
        android:id="@+id/chatToolbar"
        layout="@layout/view_compose_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="visible" />


</LinearLayout>